# Robotica

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin
devel/.private/mi_robot_pkg/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mi_robot_pkg/include/mi_robot_pkg/: HandData.h
devel/.private/mi_robot_pkg/lib/pkgconfig/: mi_robot_pkg.pc
devel/.private/mi_robot_pkg/share/mi_robot_pkg/cmake/: mi_robot_pkg-msg-extras.cmake  mi_robot_pkg-msg-paths.cmake  mi_robot_pkgConfig.cmake
devel/.private/paquete_practa1/: local_setup.sh
devel/.private/practica1/lib/pkgconfig/: practica1.pc
devel/include/mi_robot_pkg/: HandData.h
devel/lib/pkgconfig/: mi_robot_pkg.pc
devel/lib/python3/dist-packages/mi_robot_pkg/: __init__.py
devel/lib/python3/dist-packages/paquete_practa1/: __init__.py
devel/share/gennodejs/ros/mi_robot_pkg/: _index.js
devel/share/mi_robot_pkg/cmake/: mi_robot_pkg-msg-extras.cmake  mi_robot_pkg-msg-paths.cmake  mi_robot_pkgConfig-version.cmake  mi_robot_pkgConfig.cmake
devel/share/paquete_practa1/cmake/: paquete_practa1-msg-paths.cmake
devel/share/roseus/ros/mi_robot_pkg/: manifest.l
logs/mi_robot_pkg/: build.cmake.000.log.stderr
logs/paquete_practa1/: build.cmake.000.log.stderr
logs/practica1/: build.cmake.002.log.stderr  build.cmake.003.log.stderr
src/mi_robot_pkg/: CMakeLists.txt
src/practica1/: CMakeLists.txt
src/practica1/src/: control_robot_node.py  order_node.py
src/practica_2/src/practica_2/: control_robot.py  influx.py
src/proyecto_final/: CMakeLists.txt
(+23 files in other folders)
